--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,6 +1,6 @@
 NAME = ex01
 
-CXXFLAGS = -Werror -Wall -Wextra -std=c++98 -g
+CXXFLAGS = -Werror -Wall -Wextra -std=c++98
 
 RM = rm
 RMFLAGS = -rf
